# flutter-dash-demo

./: .gitignore  CHANGELOG.md  README.md  app.py  ideas.txt  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/prompts/: new-chart.prompt.md  new-dashboard.prompt.md  review-instructions.prompt.md
apps/group_executive_report/: app.py  app.yaml  config.py  data_loader.py  requirements.txt  sample_data.csv
apps/group_executive_report/sections/: __init__.py  additional_charts.py  brand_breakdown.py  detail_table.py  header.py  kpi_section.py  trend_section.py
apps/operations_monitor/: app.py  app.yaml  checks_log_sample.csv  config.py  data_loader.py  global_dq_check_file_mapping.csv  global_vw_dq_monitor_sample.csv  global_vw_dq_monitor_sample_v2.csv  global_vw_file_delivery_sample.csv  global_vw_file_delivery_sample_v2.csv  requirements.txt
apps/operations_monitor/sections/: __init__.py  brand_breakdown.py  detail_table.py  file_detail_table.py  file_heatmap.py  header.py  (+6 more)
dashboards/: __init__.py
dashboards/analytics/: __init__.py  config.py  data_loader.py
flutter_dash/: __init__.py  formatters.py  helpers.py
flutter_dash/components/: __init__.py  charts.py  data_table.py  kpi_card.py  section_title.py  sidebar.py
flutter_dash/data/: __init__.py  aggregation.py  date_helpers.py  filters.py  loader.py
flutter_dash/integrations/: __init__.py  databricks.py  genie.py
flutter_dash/theme/: __init__.py  css.py  palettes.py  plotly.py  tokens.py
hub/: app.py  app.yaml  hub_config.py  requirements.txt
scripts/: run_local.ps1
(+7 files in other folders)
