[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flutter-dash"
version = "0.1.0"
description = "Reusable Streamlit dashboard framework for Flutter UK&I finance reporting"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "streamlit>=1.32.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
]

[project.optional-dependencies]
databricks = [
    "databricks-sql-connector>=3.0.0",
]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["flutter_dash*"]
